# paparazzi

./: .gitignore  .gitmodules  CITATION.cff  Checklist Nederdrone.docx  Commands Paparazzi  MAV.py  MakeYourOwnModule.txt  Makefile  README.md  README_GROUP11  TMLDP_messages.xml  ToDo_Drone  VIDEO_CREATOR_WITH_LABELS.py  VIDEO_PRESENTATION.py  balk_rtk_wip_25_10_22.txt  check_joystick_connected.py  commands paparazzi  drone_rtk_working_baud_57600.txt  fix_code_style.sh  getEntropy.m  herelink_shell.sh  herenlink_start  install.py  ivy_test_draw_shapes.py  matplotlib_3d.py  pprzlink.patch  pygame_visual.py  readDictionary.m  readme.txt  start.py  test.cpp  test.txt  test.txt.orig  test_github_by_Andreas.txt  test_textfile.txt  train.m
Logs/: 20220311-132119.csv  20220311-134820.csv
Python Tryouts/: ViolaJones_object_detection.py  edge_detection.py  floor_detection.py  image_processing.py  most_optimized.py  segmentation.py
Videos/: vlc-record-2020-03-05-11h50m08s-rtp_5000.sdp-.avi  vlc-record-2020-03-05-12h48m12s-rtp_5000.sdp-.avi
backup/: gps_yaw_fusion_modified.cpp
conf/: .gitignore  Makefile.arm-linux  Makefile.arm-linux-toolchain  Makefile.chibios  Makefile.nps  Makefile.raspberry  Makefile.stm32  Makefile.stm32-upload  TMLDP_messages.xml  abi.xml  abi.xml.orig  am_messages_new.xml  az_messages.xml  conf_dronisos.xml  conf_example.xml  control_panel_example.xml  flash_modes.xml  messages.xml  messages_mine.xml  messages_t4.xml  my_messages.xml  p_messages.xml  pprz_center_settings.ini  ubx.xml  ya_messages.xml
conf/airframes/: ardrone2_raw.xml
conf/autopilot/: darko_autopilot.xml  rotorcraft_autopilot.xml  rotorcraft_autopilot_never_landing_drone.xml  rotorcraft_oneloop_andi_indi.xml  rotorcraft_oneloop_switch.xml  rotorcraft_oneloop_with_backup.xml
conf/boards/: cube_orange.makefile  cube_orangeplus.makefile  disco.makefile  lisa_mx_2.1.makefile  lisa_mx_defaults.makefile  lisa_mxs_1.0.makefile  opa_ftd_1.0.makefile  px4fmu_4.0.makefile  px4fmu_4.0_chibios.makefile  px4fmu_5.0_chibios.makefile  px4io_2.4.makefile  raspberry.makefile
conf/chibios/: chibios_rules.mk
conf/firmwares/: rotorcraft.makefile
conf/flight_plans/: az_groundstation.xml  bordeaux_basic.xml  bvlos_ehr8.xml  delfly_OJF.xml  egg_slamming.xml  nedderdrone_takeoff.xml  nedderdrone_takeoff_test_sim.xml  nederdrone_ehr8.xml  rotorcraft_basic.xml  rotorcraft_basic_test.xml  rotorcraft_optitrack.xml
conf/gcs/: bottom_settings.xml  iris_vision_settings.xml  layout.dtd  map_only.xml
conf/joystick/: TX16S.xml  extreme_3d_pro.xml  jumper_t-lite.xml  logitech_extreme_3D.xml  ps4_gamepad.xml  radiomaster_tx12.xml  sm600.xml  sm600.xml.orig  sm600_mode.xml  xbox_gamepad_yawontriggers.xml
conf/modules/: AOA_pwm.xml  GROUP11_OPTICFLOW.xml  GROUP_11.xml  Overactuated_mixing.xml  Overactuated_mixing_sim.xml  acado.xml  actuators_disco.xml  actuators_faulhaber.xml  actuators_fport.xml  actuators_sbus.xml  actuators_serial_act_t4.xml  adc_generic.xml  aero_angles_ekf.xml  ahrs_float_cmpl_quat.xml  air_data.xml  airspeed_ms45xx_i2c.xml  airspeed_sdp3x.xml  alphapilotahrs.xml  aoa_t4.xml  approach_moving_target.xml  bebop2_bernardo_module.xml  ca_am7.xml  can_fuelcell.xml  cfd_wind_data_importer.xml  constant_turning.xml  ctrl_circle.xml  ctrl_eff_sched_rot_wing_v3.xml  ctrl_eff_sched_rot_wing_v3a.xml  ctrl_eff_sched_rot_wing_v3b.xml  ctrl_effectiveness_calculator.xml  ctrl_effectiveness_scheduling_nld.xml  ctrl_effectiveness_scheduling_rotating_wing_drone.xml  ctrl_interface.xml  ctrl_module_outerloop_demo.xml  ctrl_windtunnel.xml  ctrl_windtunnel_2022.xml  cv_detect_color_object.xml  cv_detect_color_object_custom.xml  cv_detect_color_object_forward.xml  cv_detect_gate.xml  (+150 more)
conf/radios/: Alessandro_TGY-i6_PPM.xml  DT_Rx31_Devo10.xml  FlyElectricRx31.xml  FrSky3dr.xml  crossfire_sbus.xml  crossfire_sbus.xml.orig  crossfire_sbus_rot_wing.xml  devo10.xml  mistery_sbus.xml  sbus_delft.xml
conf/settings/: rotorcraft_basic.xml
conf/swarm/: conf_3uav_rot.json
conf/telemetry/: FS_F3P.xml  darko_tlm.xml  default_fixedwing.xml  default_fixedwing_imu.xml  default_rotorcraft.xml  default_rotorcraft_mavlink.xml  default_rotorcraft_slow.xml  default_rotorcraft_swarm.xml  eclipson_indoor.xml  effectiveness_rotorcraft.xml  highspeed_rotorcraft.xml  highspeed_rotorcraft_windtunnel.xml  rotorcraft_with_logger.xml  rotorcraft_with_logger_stereocam.xml  rotwing_telemtry.xml  seal_rotorcraft_merged.xml  seal_rotorcraft_merged_indoor.xml  sh_seal_rotorcraft.xml  t4_actuators_board_debugdata.xml  tiltprop_telemetry.xml  windtunnel.xml
devo10/: model8.ini
ground_detection_python/: GreenTrainer.py  ROC.py
sw/ext/sds_software_suite_2024_04_09/python_bindings/: CMakeLists.txt  drone_sdk_test_bindings.py
sw/ext/sixdof_falcon_2024_08_18/python_bindings/: CMakeLists.txt  falcon_test_bindings.py  falcon_test_bindings_2.py  pyFalcon.cpp
sw/ext/sixdof_system/OLD_DEPRECATED_1.5.2/examples/: CMakeLists.txt  custom_mode_am  gyro_calibration  gyro_calibration.cpp  makefile  relative_beacon_tracking  relative_beacon_tracking.cpp  sixdof_tracking
sw/ext/sixdof_system/examples/: CMakeLists.txt  custom_mode_am  custom_mode_am.cpp  custom_mode_am_old.cpp  makefile  relative_beacon_tracking.cpp  sixdof_tracking.cpp
videos/: vlc-record-2023-03-10-10h02m38s-rtp_5000.sdp-.avi  vlc-record-2023-03-10-10h06m31s-rtp_5000.sdp-.avi  vlc-record-2023-03-17-12h52m39s-rtp_5000.sdp-.avi  vlc-record-2023-03-17-13h01m30s-rtp_5000.sdp-.avi  vlc-record-2023-03-23-22h43m36s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-00h08m43s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h34m39s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h37m13s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h38m38s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h45m39s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h52m05s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h53m48s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h54m42s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-11h58m41s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-12h00m40s-rtp_5000.sdp-.avi  vlc-record-2023-03-24-12h04m38s-rtp_5000.sdp-.avi
(+2530 files in other folders)
